# solfaml

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
solfaml-formatter/: Cargo.toml
solfaml-formatter/src/: display.rs  lib.rs  main.rs  types.rs  visitor.rs
solfaml-parser/: Cargo.toml
solfaml-parser/src/: ast.rs  error.rs  parser.rs  wasm.rs
solfaml-parser/src/snapshots/: solfaml_parser__parser__tests__full_parsing.snap  solfaml_parser__parser__tests__header_parser.snap  solfaml_parser__parser__tests__measure_parsing.snap  solfaml_parser__parser__tests__measure_repetition_parsing.snap  solfaml_parser__parser__tests__multi_staff_parsing.snap  solfaml_parser__parser__tests__per_voice_lyrics_parsing.snap  solfaml_parser__parser__tests__simple_solfa_parsing.snap
src/: ast.rs  error.rs  lib.rs  parser.rs
src/snapshots/: solfaml_parser__parser__tests__full_parsing.snap  solfaml_parser__parser__tests__header_parser.snap  solfaml_parser__parser__tests__lyrics_parsing.snap  solfaml_parser__parser__tests__measure_repetition_parsing.snap  solfaml_parser__parser__tests__metadata_parser.snap  solfaml_parser__parser__tests__multi_staff_parsing.snap  solfaml_parser__parser__tests__per_voice_lyrics_parsing.snap  solfaml_parser__parser__tests__simple_solfa_parsing.snap
