[package]
name = "solfaml-parser"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
winnow = "0.7.14"

serde-wasm-bindgen = { version = "0.6.5", optional = true }
tsify = { version = "0.5.6", optional = true }
wasm-bindgen = "0.2.113"

[features]
wasm = ["tsify", "serde-wasm-bindgen"]

[dev-dependencies]
insta = "1.44.3"
