[package]
name = "solfaml-parser"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
winnow = "0.7.14"

tsify = { version = "0.5.6", features = ["js"], optional = true }
wasm-bindgen = "0.2.113"

[features]
wasm = ["tsify"]

[dev-dependencies]
insta = "1.44.3"
