[package]
name = "solfaml-formatter"
version = "0.1.0"
edition = "2024"
description = "Optionated formatter for the Solfa Markup Language."
authors = ["LIOKA Ranraison Fiderana <luckasranarison@gmail.com>"]
repository = "https://github.com/solfaml/solfaml"
license = "Apache-2.0"
keywords = ["formatter", "markup", "solfa"]
categories = ["development-tools"]
readme = "./README.md"

[dependencies]
solfaml-parser = { workspace = true }
