[package]
name = "solfaml-parser"
version = "0.1.0"
edition = "2024"
description = "Multi-target parser for the Solfa Markup Language."
authors = ["LIOKA Ranraison Fiderana <luckasranarison@gmail.com>"]
repository = "https://github.com/solfaml/solfaml"
license = "Apache-2.0"
keywords = ["parser", "markup", "solfa"]
categories = ["parser-implementations"]
readme = "./README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { workspace = true }
winnow = "0.7.14"

tsify = { version = "0.5.6", features = ["js"], optional = true }
wasm-bindgen = "0.2.113"

[features]
wasm = ["tsify"]

[dev-dependencies]
insta = { workspace = true }
